# opalpos-new

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  requirements.txt
alembic/: env.py
app/: main.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  business.py  products.py  users.py
backend/app/core/: cache.py  config.py  database.py  exceptions.py  logging.py  security.py  tenancy.py
backend/app/db/: mixins.py  seed.py
backend/app/db/seeders/: base.py  demo_seeder.py
backend/app/middleware/: __init__.py  logging.py  rate_limit.py  request_context.py  security_headers.py
backend/app/models/: __init__.py  business.py  product.py  role.py  user.py
backend/app/realtime/: ws.py
backend/app/repositories/: base.py  business.py  product.py  query.py  user.py
backend/app/schemas/: auth.py  business.py  product.py  user.py  validators.py
backend/app/services/: auth.py  business.py  product.py  user.py
backend/app/tasks/: backup.py  celery_app.py  notifications.py  reports.py
backend/app/utils/: files.py  pagination.py  response.py
backend/tests/: conftest.py  test_auth.py  test_products.py  test_tenancy.py
docs/: ADD_NEW_RESOURCE.md  ARCHITECTURE.md  POS_STRUCTURE_GAP.md
frontend/: Dockerfile  next.config.ts  package.json
tests/: test_users.py
(+45 files in other folders)
